--- a/calc.css
+++ b/calc.css
@@ -5,7 +5,7 @@
 body{
 	margin:0;
 	padding:0;
-	background-image: url("y.jpg");
+	background-image: url("mmm.jpg");
 	height: 100vh; 
 	background-position: center;
  	background-repeat: no-repeat;
@@ -16,32 +16,71 @@ body{
 	transform: translateX(-15%);
 }
 #calc{
-	margin: 0 auto 0 auto;
+	position: fixed;
+  	top: 50%;
+  	left: 50%;
+  	width: 70%;
+	height: 80%;
+  	transform: translate(-50%, -50%);
+  	align-items: center;
 }
-@media screen and (min-width: 768px)
-{
-	#calc{
-		width: 700px;
-		height: 500px;
-	}
-} 
+
 textarea{
 	color: #000;
-	background: #F0FFFF;
-	display: block;
-	margin: 0 auto;
+	background-color: #F0FFFF;
+	border-radius: 40px;
+	width: 170px;
+	height: 60px;
 	resize: none;
+	padding: 12px;
+	text-align: center;
+	margin-bottom: 12px;
+}
+::-webkit-input-placeholder {
+  	opacity: 0.8;
+  	color: #D3D3D3;
 }
 button{
 	width: 70px;
 	height: 60px;
-	border-radius: 20px;
-	background-color: #990012;
-	color: #fff;
+	color: black;
+	opacity: 0.8;
 	padding: 5px;
-	margin: 4px;
+	margin: 10px;
+}
+#add,#div{
+	border-radius: 70px 0 70px 0;
+	background-image: linear-gradient(#F08080, gold);
+}
+#sub,#mul{
+	border-radius: 0 70px 0 70px;	
+	background-image: linear-gradient(green, gold);
+}
+#clr{
+	border-radius: 40px 40px;
+	background-image: linear-gradient(to bottom right, #87CEFA, gold);
 }
 button:hover{
-	background-color: #C11B17;
-	color: black;
+	opacity: 1;
+	animation: bounce 1s;
+}
+@keyframes bounce {
+  0%, 20%, 60%, 100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  40%,80% {
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+}
+#three{
+	margin: 2% auto;
+	border-radius: 40px;
+	width: 150px;
+	height: 70px;
+	text-align: center;
+	padding: 18px;
+	background-color: #F0FFFF;
 }
